other/ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: esp-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
  labels:
    type: endpoints-app
spec:
  tls:
  - hosts:
    - api.endpoints.cicd-339902.cloud.goog
    secretName: esp-tls
  rules:
  - host: api.endpoints.cicd-339902.cloud.goog
    http:
      paths:
      - backend:
          serviceName: esp-srv
          servicePort: 80
