other/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    type: endpoints-app
spec:
  rules:
  - host: singorojo.my.id
    http:
      paths:
      - backend:
          serviceName: webapp1-svc
          servicePort: 80
